files/iptables/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:PSAD_BLOCK_FORWARD - [0:0]
:PSAD_BLOCK_INPUT - [0:0]
:PSAD_BLOCK_OUTPUT - [0:0]
-A INPUT -j PSAD_BLOCK_INPUT
-A INPUT -m set --match-set blockedIPs src -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m set --match-set KomroIPNets src -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m set --match-set KomroIPNets src -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m set --match-set KomroIPNets src -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m set --match-set KomroIPNets src -m tcp --dport 143 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m set --match-set KomroIPNets src -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m set --match-set KomroIPNets src -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m set --match-set KomroIPNets src -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m state --state NEW --dport 40044 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A INPUT -j LOG
-A FORWARD -j PSAD_BLOCK_FORWARD
-A FORWARD -j LOG
-A OUTPUT -j PSAD_BLOCK_OUTPUT
-A OUTPUT -j ACCEPT
COMMIT
